fix(recipe): align dashboard-card actions

--- a/packages/ods-recipes/src/components/dashboard-card/src/css-modules/index.module.scss
+++ b/packages/ods-recipes/src/components/dashboard-card/src/css-modules/index.module.scss
@@ -59,6 +59,7 @@
       display: flex;
       flex-flow: column;
       row-gap: var(--ods-theme-row-gap);
+      align-items: start;
     }
   }
 }
